                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 13-02-2006 added: three new visibility conditions: playlist.israndom, playlist.isrepeat, playlist.isrepeatone
 - 13-02-2006 changed: the Repeat and Repeat One buttons in the Now Playing window have been consolidated into a single button
 - 13-02-2006 added: two new builtin commands for playlist control, they can be used in the skin or in keymap.xml
		xbmc.playercontrol(random) = enables and disables random playback
		xbmc.playercontrol(repeat) = cycles through states off -> all -> one and back around
 - 13-02-2006 fixed: repeatone was ignored if randomize was enabled on a playlist
 - 13-02-2006 changed: httpapi playfile command to immediately start playback of a playlist.
		it also accepts an extra parameter to force the playlist (note the playlist is CLEARED! before it playback starts).
		if a playlist is not provided, the current playlist is used.
		if there is no current playlist, then 1 is assumed (like the playmedia builtin command)
		xbmcHttp?command=PlayFile&parameter=e:\albums\playlists\music\tekno.m3u;PLAYLIS (where PLAYLIST=0,1,2,3)
 - 13-02-2006 added: new info labels: playlist.length, playlist.position, playlist.random, playlist.repeat
 - 13-02-2006 added: More lcd info labels thanks to Jeff McClain.
 - 13-02-2006 fixed: Windows with conditional visibility and WindowClose animations could flash on screen.
 - 13-02-2006 added: New Add/Edit media source dialogs.
 - 13-02-2006 fixed: Page up/down controls were hard to move off from.
 - 12-02-2006 fixed: when changing the sort between ascending and descending autoplay next item in music will follow
 - 12-02-2006 fixed: WindowOpen animations weren't shown.